[tool.poetry]
name = "writefreely-to-markdown"
version = "0.1.2"
description = ""
authors = ["Ryan <ryan@alien.gov>"]
readme = "README.md"
license = "MIT"
keywords = ["blogging", "blog", "json", "toml", "markdown"]
homepage = "https://github.com/rywng/writefreely-to-markdown"

[tool.poetry.dependencies]
python = "^3.12"
tomlkit = "^0.13.2"

[tool.poetry.scripts]
wfconvert = 'writefreely_to_markdown.main:main'

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
